@@ -66,6 +66,7 @@ struct System {
   virtual MAEvent processEvents(int waitFlag) = 0;
   virtual char *loadResource(const char *fileName);
   virtual void optionsBox(StringList *items) = 0;
+  virtual void setWindowSize(int width, int height) = 0;
   virtual void setWindowTitle(const char *title) = 0;
   virtual void share(const char *path) = 0;
   virtual void showCursor(CursorType cursorType) = 0;
